--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <section class="home" id="home">
         <div class="content">
-            <img src="./logo.jpg" alt="Photo of Ragul">
+            <img src="./assets/logo.jpg" alt="Photo of Ragul">
             <h3>Ragul <span>Sankar</span> </h3>
             <p>I am <span class="typing-text">Frontend Developer</span></p>
             <a href="#aboutme"class="btn">About Me</a>
