About Section COmpleted

--- a/index.html
+++ b/index.html
@@ -48,6 +48,36 @@
     <!-- About Section Starts -->
     <section class="about" id="about">
         <h1 class="heading">About <span>Me</span></h1>
+        <div class="row">
+          <div class="image"><img src="./assets/about_img.jpg" alt="FUllsize photo">
+          </div>
+          <div class="content">
+            <h1>React Developer and C++ coder</h1>
+            <h3><span>My Name is Ragul Sankar</span></h3>
+            <p class="info">Myself Ragul from SRMIST, Chennai.
+              I am currently pursuing my 2nd year in Computer Science and Engineering.
+              
+              I am currently a front-end developer trying to learn backend and become a full-stack developer.
+              
+              I am currently building web3bharat's Chennai buidl hub along with my team so it would be great if I could come and connect up with people
+              </p>
+              <div class="container">
+                <div class="box">
+                  <p><span>Age</span>18</p>
+                  <p><span>Mail ID</span>ragulsankar2004@gmail.com</p>
+                  <p>Degree: B.Tech in Computer Science and Engineering</p>
+                  <div>
+                    <p>mobile Number:
+                    <p id="mobNumber"></p>
+                    <button onclick="myFunction()">Tap to Reveal</button></p>
+                  </div>
+                  <p>location : Chennai, TamilNadu, India</p>
+
+                </div>
+              </div>
+              <a href="">Download CV</a>
+          </div>
+        </div>
     </section>
     <!-- About Section Ends -->
 
