--- a/index.html
+++ b/index.html
@@ -1,83 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ragul Sankar</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-    />
-    <link rel="stylesheet" href="index.css" />
-  </head>
 
-  <body>
-    <img src="./assets/forest-trees-perspective-bright-957024.jpeg" alt="green background" class="background-image">
-    <!-- Navbar Starts -->
-    <header>
-      <div id="menu-bars" class="fas fa-bars"></div>
-      <nav class="navbar">
-        <a href="Home">Home</a>
-        <a href="About">About</a>
-        <a href="Resume">Resume</a>
-        <a href="My Works">My Works</a>
-        <a href="Hackathons">Hackathons</a>
-        <a href="Certifications">Certifications</a>
-        <a href="Contact Me">Contact Me</a>
-      </nav>
-    </header>
-    <!-- Navbar Ends -->
-    <!-- Intro Starts -->
-    <section class="home" id="home">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ragul Sankar</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <img src="./assets/forest-trees-perspective-bright-957024.jpeg" alt="green background" class="background-image">
+  <!-- Navbar Starts -->
+  <header>
+    <div id="menu-bars" class="fas fa-bars"></div>
+    <nav class="navbar">
+      <a href="Home">Home</a>
+      <a href="About">About</a>
+      <a href="Resume">Resume</a>
+      <a href="My Works">My Works</a>
+      <a href="Hackathons">Hackathons</a>
+      <a href="Certifications">Certifications</a>
+      <a href="Contact Me">Contact Me</a>
+    </nav>
+  </header>
+  <!-- Navbar Ends -->
+  <!-- Intro Starts -->
+  <section class="home" id="home">
     <div id="particles-js"></div>
-      <div class="content">
-        <img src="./assets/logo.jpg" alt="Photo of Ragul" />
-        <h3>Ragul <span>Sankar</span></h3>
-        <p>
-          I'm a
-          <span
-            class="typed"
-            data-typed-items="FullStack Web Developer, ReactNative App Developer, Hackathon Enthusiasts"
-          ></span>
-        </p>
-        <a href="#aboutme" class="btn">Hire Me</a>
+    <div class="content">
+      <img src="./assets/logo.jpg" alt="Photo of Ragul" />
+      <h3>Ragul <span>Sankar</span></h3>
+      <p>
+        I'm a
+        <span class="typed"
+          data-typed-items="FullStack Web Developer, ReactNative App Developer, Hackathon Enthusiasts"></span>
+      </p>
+      <a href="#aboutme" class="btn">Hire Me</a>
+    </div>
+  </section>
+  <!-- Intro Ends -->
+  <!-- About Section Starts -->
+  <section class="about" id="about">
+    <h1 class="heading">About <span>Me</span></h1>
+    <div class="row">
+      <div class="image"><img src="./assets/about_img.jpg" alt="FUllsize photo">
       </div>
-    </section>
-    <!-- Intro Ends -->
-    <!-- About Section Starts -->
-    <section class="about" id="about">
-        <h1 class="heading">About <span>Me</span></h1>
-        <div class="row">
-          <div class="image"><img src="./assets/about_img.jpg" alt="FUllsize photo">
-          </div>
-          <div class="content">
-            <h1>React Developer and C++ coder</h1>
-            <h3><span>My Name is Ragul Sankar</span></h3>
-            <p class="info">Myself Ragul from SRMIST, Chennai.
-              I am currently pursuing my 2nd year in Computer Science and Engineering.
-              
-              I am currently a front-end developer trying to learn backend and become a full-stack developer.
-              </p>
-              <div class="container">
-                <div class="box">
-                  <p><span>Age</span>18</p>
-                  <p><span>Mail ID</span>ragulsankar2004@gmail.com</p>
-                  <p>Degree: B.Tech in Computer Science and Engineering</p>
-                  <div>
-                    <p>mobile Number:
-                    <p id="mobNumber"></p>
-                    <button onclick="myFunction()">Tap to Reveal</button></p>
-                  </div>
-                  <p>location : Chennai, TamilNadu, India</p>
+      <div class="content">
+        <h1>React Developer and C++ coder</h1>
+        <h3><span>My Name is Ragul Sankar</span></h3>
+        <p class="info">Myself Ragul from SRMIST, Chennai.
+          I am currently pursuing my 2nd year in Computer Science and Engineering.
 
-                </div>
-              </div>
-              <a href="">Download CV</a>
+          I am currently a front-end developer trying to learn backend and become a full-stack developer.
+        </p>
+        <div class="container">
+          <div class="box">
+            <p><span>Age: </span>18</p>
+            <p><span>Mail ID: </span>ragulsankar2004@gmail.com</p>
+            <p><span>Degree: </span>B.Tech in Computer Science and Engineering</p>
+            <div>
+              <p class="info-num">
+                <span>mobile Number:</span>
+                <span hidden style="color:#222" id="reveal-text">+91 73584 08137</span>
+                <button class="reveal-btn" id="reveal-btn">Tap to Reveal</button>
+              </p>
+            </div>
+            <p>location : Chennai, TamilNadu, India</p>
+
           </div>
         </div>
-    </section>
-    <!-- About Section Ends -->
+        <a href="">Download CV</a>
+      </div>
+    </div>
+  </section>
+  <!-- About Section Ends -->
 
 
 
@@ -85,9 +83,9 @@
 
 
 
-    <script src="./vendor/particle.js/particles.min.js"></script>
-    <script src="./vendor/particle.js/app.js"></script>
-    <script src="./vendor/typed.js/typed.js"></script>
-    <script src="./script.js"></script>
+  <script src="./vendor/particle.js/particles.min.js"></script>
+  <script src="./vendor/particle.js/app.js"></script>
+  <script src="./vendor/typed.js/typed.js"></script>
+  <script src="./script.js"></script>
 
 </html>
