Woks section updated

--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
       </div>
     </section>
 
-
-
     <section class="Resume" id="resume">
       <h1 class="heading">Resume</h1>
 
@@ -92,8 +90,7 @@
           <i class="fas fa-code"></i>
           <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa,
-            quidem.
+            I have been a developer for the past 1 year and am quite good in ReactJs
           </p>
         </div>
 
@@ -101,45 +98,42 @@
           <i class="fas fa-paint-brush"></i>
           <h3>graphic design</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa,
-            quidem.
+            Not a Professional Designer but do design up some for my personal works
           </p>
         </div>
 
         <div class="box tilt">
           <i class="fas fa-bullhorn"></i>
-          <h3>seo marketing</h3>
+          <h3>App Developer</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa,
-            quidem.
+            I am also a React Native Developer and built a couple of apps for Hackathon
           </p>
         </div>
 
-        <div class="box tilt">
+        <!-- <div class="box tilt">
           <i class="fas fa-envelope"></i>
           <h3>email marketing</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa,
             quidem.
           </p>
-        </div>
+        </div> -->
 
         <div class="box tilt">
           <i class="fas fa-mobile"></i>
           <h3>Responsive designs</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa,
-            quidem.
+            I am quite good in Tailwind CSS and Bootstrap.so most of my websites are Responsive on both Mobile and Laptop
           </p>
         </div>
 
-        <div class="box tilt">
+        <!-- <div class="box tilt">
           <i class="fab fa-wordpress"></i>
           <h3>wordpress</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa,
             quidem.
-          </p>
+          </p> -->
         </div>
       </div>
     </section>
@@ -261,14 +255,14 @@
             rows="10"
           ></textarea>
 
-          <input type="submit" class="btn" value="send message" />
+          <input type="submit" class="btn" value="Send Message" />
         </form>
       </div>
     </section>
 
 
     <div class="footer">
-      <span> Ragul Sankar </span> <br />React Developer And C++ Coder
+      <span> Ragul Sankar </span> <br />React Developer And C++ Programmer
       <div>© Copyright Ragul Sankar | All Rights Reserved</div>
     </div>
 
@@ -327,4 +321,3 @@
     </script>
   </body>
 </html>
-<span class="typed" data-typed-items=>ReactNative Ap</span>
