--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#resume">Resume</a>
-        <a href="#portfolio">My Works</a>
+        <a href="#skills">Skills</a>
+        <a href="#works">My Works</a>
         <a href="#certificates">Certifications</a>
         <!-- <a href="#blogs">My Blogs</a> -->
         <a href="#contact">Contact Me</a>
@@ -82,8 +82,8 @@
       </div>
     </section>
 
-    <section class="Resume" id="resume">
-      <h1 class="heading">Resume</h1>
+    <section class="skills" id="skills">
+      <h1 class="heading"><span>My</span> Skills</h1>
 
       <div class="box-container">
         <div class="box tilt">
@@ -123,7 +123,7 @@
           <i class="fas fa-mobile"></i>
           <h3>Responsive designs</h3>
           <p>
-            I am quite good in Tailwind CSS and Bootstrap.so most of my websites are Responsive on both Mobile and Laptop
+            I am quite good in Tailwind CSS and Bootstrap and so most of my websites are Responsive on both Mobile and Laptop
           </p>
         </div>
 
@@ -140,8 +140,8 @@
 
 
 
-    <section class="portfolio" id="certificates">
-      <h1 class="heading"><span> my </span> portfolio</h1>
+    <section class="works" id="works">
+      <h1 class="heading"><span> my </span> works</h1>
 
       <div class="box-container">
         <div class="box tilt">
