--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" src="./assets/logo.jpg">
     <title>Ragul Sankar | Portfolio</title>
 
     <!-- font awesome cdn link  -->
@@ -26,7 +27,7 @@
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
         <a href="#works">My Works</a>
-        <a href="#certificates">Certifications</a>
+        <a href="#Educations">My Educations</a>
         <!-- <a href="#blogs">My Blogs</a> -->
         <a href="#contact">Contact Me</a>
       </nav>
@@ -138,6 +139,10 @@
       </div>
     </section>
 
+    <section class="Education" id="Education">
+      <h1 class="heading"><span>My</span>Education</h1>
+    </section>
+
 
 
     <section class="works" id="works">
@@ -190,7 +195,7 @@
 
  
 
-    <!-- <section class="blogs" id="blogs">
+    <section class="blogs" id="blogs">
       <h1 class="heading"><span> my </span> blogs</h1>
 
       <div class="box-container">
@@ -227,7 +232,7 @@
           <a href="#" class="btn">learn more</a>
         </div>
       </div>
-    </section> -->
+    </section> 
 
 
 
